fix: video text alignment

--- a/src/app/features/onboarding/tutor/components/TutorOnboardingVideoStep/TutorOnboardingVideoStep.module.scss
+++ b/src/app/features/onboarding/tutor/components/TutorOnboardingVideoStep/TutorOnboardingVideoStep.module.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 250px;
     margin: 16px auto;
+    text-align: center;
 }
 
 .imgContainer {
